style(form): fix spacing before error in inlined elements

--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -50,7 +50,12 @@
   }
 
   // Don't cumulate margin-bottoms for inlined elements (radio...), because .fr-fieldset has already its own
-  .fr-fieldset__element > .fr-fieldset > .fr-fieldset__element.fr-fieldset__element--inline {
+  // This is important because of multilpe conditional hidden elements to not take additional space,
+  // but we need the usual margin when there are an error or conditional spinner is visible.
+  // scss-lint:disable SingleLinePerSelector
+  .fr-fieldset__element
+    > .fr-fieldset:not(.fr-fieldset--error):not(:has(+ .spinner))
+    > .fr-fieldset__element.fr-fieldset__element--inline {
     margin-bottom: 0;
   }
 
